@@ -7,6 +7,7 @@ Changes for 1.5:
 
 Changes for 1.4.1:
 
+ - fixed several issues in housekeeper (Alexei) 
  - changed properties of text files in SVN repository (Alexei)
  - removed text "Current node [N]" from node selector (Alexei)
  - removed duplicate index of table httptest (Alexei)
